style.css
/* ... */
.nav-menu:not(.mobile) .menu li.menu-item-has-children.focus > ul:focus-within { opacity: 1!important; } 
.nav-menu:not(.mobile) .menu li ul.sub-menu:not(.active) { opacity: 0; }
.nav-menu:not(.mobile) .menu li.hover ul.sub-menu:not(.active) { opacity: 1; }
.nav-menu:not(.mobile) .menu li.focus ul ul.sub-menu:not(.active) { opacity: 0; }
.nav-menu:not(.mobile) .menu li.focus ul li.hover ul.sub-menu { opacity: 1; }

.nav-menu:not(.mobile) .menu ul:before,
.nav-menu:not(.mobile) .menu ul:after { content: ""; display: block; position: absolute; bottom: 100%; }
.nav-menu:not(.mobile) .menu ul:before { left: 0; right: 0; height: 20px; }
.nav-menu:not(.mobile) .menu ul:after { border: 8px solid transparent; border-bottom-color: transparent; left: 18px; }
.nav-menu:not(.mobile) .menu ul ul { left: calc(100% + 20px); top: -10px !important; }
.nav-menu:not(.mobile) .menu ul ul:before { bottom: 0; height: auto; left: auto; left: -20px; top: 0; width: 22px; }
.nav-menu:not(.mobile) .menu ul ul:after { border-bottom-color: transparent; bottom: auto; left: -16px; top: 20px; }
.nav-menu-dropdown-left .nav-menu:not(.mobile) .menu ul ul:before { left: auto; right: -20px; }
.nav-menu-dropdown-left .nav-menu:not(.mobile) .menu ul ul { right: calc(100% + 20px); left: auto; }
.nav-menu-dropdown-left .nav-menu:not(.mobile) .menu ul ul:after { border-right-color: transparent; right: -16px; left: auto; }
.nav-menu-dropdown-left .nav-menu:not(.mobile) ul ul button .svg-icon { transform: none; }

.nav-menu:not(.mobile) a,
.nav-menu:not(.mobile) span { transition: all 0.3s ease; }

.nav-menu.mobile { padding: 0; }
.nav-menu.mobile button:focus { outline: none; }
.nav-menu.mobile > button { padding: 16px 20px; float: right; }
.nav-menu.mobile button .svg-icon { transition: all 250ms; }
.nav-menu.mobile button.active .svg-icon { transform: rotate(180deg); }
.nav-menu.mobile ul { border: 0; }
.nav-menu.mobile ul li .menu-item-wrapper { justify-content: space-between; width: 100%; }
.nav-menu.mobile > div > ul > li:last-child { margin-bottom: 52px; }
.nav-menu.mobile ul li a { font-size: 15px; font-weight: 600; padding: 14px 20px; text-align: left; }
.nav-menu.mobile ul ul li a { font-size: 14px; }
.nav-menu.mobile ul ul li a { padding: 12px 0 12px 40px; }
.nav-menu.mobile ul ul ul li a { padding: 12px 0 12px 60px; }
.nav-menu.mobile ul button { margin: 10px 0; padding: 0 20px; }

/* menu styling */
.nav-menu a { color: #fff; font-weight: 600; }
.nav-menu .svg-icon { fill: #333; }
.nav-menu:not(.mobile) .menu ul { background: #333; color: #fff; }
.nav-menu:not(.mobile) .menu ul:after { border-bottom-color: #333; }
.nav-menu:not(.mobile) .menu ul ul:after { border-right-color: #333; }
.nav-menu-dropdown-left .nav-menu:not(.mobile) .menu ul ul:after { border-left-color: #333; }

.nav-menu:not(.mobile) { border-top: 1px solid #eee; font-size: 14px; font-weight: 400; float: none; padding: 6px 0 20px 0; }
.nav-menu:not(.mobile) a { color: #999; }
.nav-menu:not(.mobile) a:hover { color: #333; }
.nav-menu:not(.mobile) ul ul a { font-size: 14px; }
.nav-menu:not(.mobile) ul ul a:hover { color: #ccc; }
.nav-menu:not(.mobile) ul ul > li:hover > span { background: rgba(255,255,255,0.1); }
.nav-menu:not(.mobile) ul ul a { color: #eee; }
.nav-menu:not(.mobile) button { background: none; color: #666; padding: 0 4px; margin-left: 2px; border-radius: 4px; }
.nav-menu:not(.mobile) button.active { background: #eee; color: #333; }
.nav-menu:not(.mobile) button .svg-icon { fill: #ccc; }
.nav-menu:not(.mobile) ul ul button { background: none; color: #eee; padding: 0 5px; margin: 0 10px 0 0; }
.nav-menu:not(.mobile) ul ul button.active { background: #444; color: #eee; }
.nav-menu:not(.mobile) ul ul button .svg-icon { transform: rotate(-90deg); }
.nav-menu:not(.mobile) .menu > li { margin: 16px 20px 0 0; position: relative; }
.nav-menu:not(.mobile) .menu > li:last-child { margin-right: 0; }
.nav-menu:not(.mobile) .menu a { padding: 0; }

.nav-menu:not(.mobile) li.current_page_item > span > a, 
.nav-menu:not(.mobile) li.current-menu-item > span > a, 
.nav-menu:not(.mobile) li.current-menu-ancestor > span > a, 
.nav-menu:not(.mobile) li.current-post-parent > span > a { color: #333; }
.nav-menu:not(.mobile) ul ul li.current_page_item > span > a, 
.nav-menu:not(.mobile) ul ul li.current-menu-item > span > a, 
.nav-menu:not(.mobile) ul ul li.current-menu-ancestor > span > a, 
.nav-menu:not(.mobile) ul ul li.current-post-parent > span > a { color: #333; }

.nav-menu.mobile { background: #fff; border-top: 1px solid #f2f2f2; }
.nav-menu.mobile button.active .svg-icon { fill: #333; }
.nav-menu.mobile ul ul { background: rgba(0,0,0,0.03); }
.nav-menu.mobile ul li .menu-item-wrapper,
.nav-menu.mobile ul ul li .menu-item-wrapper { border-bottom: 1px solid rgba(0,0,0,0.07); }
.nav-menu.mobile > div > ul > li:first-child .menu-item-wrapper { border-top: 1px solid rgba(0,0,0,0.07); }
.nav-menu.mobile ul li a { color: #333; }
.nav-menu.mobile ul button,
.nav-menu.mobile ul ul button { border-left: 1px solid rgba(0,0,0,0.07); }

/* menu header styling */
#header .nav-menu:not(.mobile) { background: #fff; padding-bottom: 0; box-shadow: 0 1px rgba(0,0,0,0.1), 0 3px 3px rgba(0,0,0,0.04); }
#header .nav-menu:not(.mobile) { padding: 0 50px; }
#header .nav-menu:not(.mobile) .menu > li { margin-top: 0; }
#header .nav-menu:not(.mobile) .menu > li:first-child {  }
#header .nav-menu:not(.mobile) > div > ul > li > span { padding-top: 20px; padding-bottom: 20px; border-bottom: 2px solid transparent; margin-top: -1px; }
#header .nav-menu:not(.mobile) > div > ul > li:hover > span { border-color: transparent; }
#header .nav-menu:not(.mobile) > div > ul > li.current_page_item > span, 
#header .nav-menu:not(.mobile) > div > ul > li.current-menu-item > span, 
#header .nav-menu:not(.mobile) > div > ul > li.current-menu-ancestor > span, 
#header .nav-menu:not(.mobile) > div > ul > li.current-post-parent > span { border-color: #198cff; }
/* ... */

